--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.6.1",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/recharts": "^1.8.12",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.27.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.2.0",
-    "react-toastify": "^5.4.0",
+    "react-toastify": "^6.0.6",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.7.2",
     "urql": "^1.6.3"
   },
